[package]
name = "demo"
version = "0.1.0"
edition = "2021"
authors = ["xgh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meilisearch-sdk = "0.25.0"
futures = "0.3.30"
serde_json = "1.0"
serde = {version = "1.0",features = ["derive"]}
log = "0.4.21"
env_logger = "0.11.3"